--- a/public/stylesheets/component.css
+++ b/public/stylesheets/component.css
@@ -1,23 +1,21 @@
 @font-face {
 	font-family: 'fontawesome';
-	src:url('../fonts/fontawesome/fontawesome.eot');
-	src:url('../fonts/fontawesome/fontawesome.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/fontawesome/fontawesome.woff') format('woff'),
-		url('../fonts/fontawesome/fontawesome.ttf') format('truetype'),
-		url('../fonts/fontawesome/fontawesome.svg#fontawesome') format('svg');
+	src: url('../fonts/fontawesome/fontawesome.eot');
+	src: url('../fonts/fontawesome/fontawesome.eot?#iefix') format('embedded-opentype'), url('../fonts/fontawesome/fontawesome.woff') format('woff'), url('../fonts/fontawesome/fontawesome.ttf') format('truetype'), url('../fonts/fontawesome/fontawesome.svg#fontawesome') format('svg');
 }
 
 /* Main container */
 .cbp-vm-switcher {
 	padding: 20px;
-	border: 3px solid #47a3da;
+	border: 3px solid #00aaff;
+	margin-bottom: 20px;
 }
 
 /* options/select wrapper with switch anchors */
 .cbp-vm-options {
 	text-align: right;
 	padding-bottom: 10px;
-	border-bottom: 3px solid #47a3da;
+	border-bottom: 3px solid #00aaff;
 }
 
 .cbp-vm-options a {
@@ -30,9 +28,8 @@
 	margin: 2px;
 }
 
-.cbp-vm-options a:hover,
-.cbp-vm-options a.cbp-vm-selected {
-	color: #47a3da;
+.cbp-vm-options a:hover, .cbp-vm-options a.cbp-vm-selected {
+	color: #00aaff;
 }
 
 .cbp-vm-options a:before {
@@ -53,8 +50,7 @@
 }
 
 /* Clear eventual floats */
-.cbp-vm-switcher ul:before,
-.cbp-vm-switcher ul:after {
+.cbp-vm-switcher ul:before, .cbp-vm-switcher ul:after {
 	content: " ";
 	display: table;
 }
@@ -76,7 +72,7 @@
 /* IMAGE SIZE */
 .cbp-vm-image img {
 	display: inline-block;
-	max-width: 30%;
+	max-width: 100%;
 	border: none;
 }
 
@@ -85,7 +81,7 @@
 	padding: 0;
 }
 
-.cbp-vm-price {
+.cbp-vm-date {
 	color: #c0c0c0;
 }
 
@@ -142,66 +138,59 @@
 .cbp-vm-view-grid ul li {
 	width: 33%;
 	text-align: center;
-	margin: 20px 0 0;
+	margin: 40px 0 0;
 	display: inline-block;
-	min-height: 350px;
 	vertical-align: top;
 }
 
 .cbp-vm-view-grid .cbp-vm-details {
 	max-width: 300px;
-	margin: 0 auto;
+	margin: 0 10px;
+	overflow: hidden;
+	text-align: justify;
 }
 
-.cbp-vm-view-grid .cbp-vm-price {
+.cbp-vm-view-grid .cbp-vm-date {
 	margin: 10px 0;
 	font-size: 1.0em;
 }
 
-
 /* List view */
 .cbp-vm-view-list li {
-	padding: 20px 0;
+	padding: 10px 0;
 	white-space: nowrap;
 }
 
-.cbp-vm-view-list .cbp-vm-image,
-.cbp-vm-view-list .cbp-vm-title,
-.cbp-vm-view-list .cbp-vm-details,
-.cbp-vm-view-list .cbp-vm-price,
-.cbp-vm-view-list .cbp-vm-add {
+.cbp-vm-view-list .cbp-vm-image, .cbp-vm-view-list .cbp-vm-title, .cbp-vm-view-list .cbp-vm-details, .cbp-vm-view-list .cbp-vm-date, .cbp-vm-view-list .cbp-vm-add {
 	display: inline-block;
 	vertical-align: middle;
 }
 
-.cbp-vm-view-list .cbp-vm-image {
-	width: 10%;
-}
-
 .cbp-vm-view-list .cbp-vm-title {
 	padding: 0 10px;
+	width: 20%;
+	max-height: 6em;
+	overflow: hidden;
 	white-space: normal;
-	width: 23%;
+	text-overflow: ellipsis;
 }
 
-.cbp-vm-view-list .cbp-vm-price {
-	font-size: 1.0em;
-	width: 10%;
+.cbp-vm-view-list .cbp-vm-date {
+	width: 15%;
+	margin-right: 10px;
 }
 
 .cbp-vm-view-list .cbp-vm-details {
-	width: 40%;
-	padding: 0 5px;
+	width: 35%;
+	max-height: 6em;
+	padding: 0 15px;
 	overflow: hidden;
 	white-space: normal;
-}
-
-.cbp-vm-view-list .cbp-vm-add {
-	margin: 0;
+	text-overflow: ellipsis;
 }
 
 @media screen and (max-width: 66.7em) {
-	.cbp-vm-view-list .cbp-vm-details  {
+	.cbp-vm-view-list .cbp-vm-details {
 		width: 30%;
 	}
 }
@@ -221,13 +210,13 @@
 		width: auto;
 	}
 
-	.cbp-vm-view-list .cbp-vm-details  {
+	.cbp-vm-view-list .cbp-vm-details {
 		display: block;
 		width: 100%;
 		margin: 10px 0 0 0;
 	}
 
-	.cbp-vm-view-list .cbp-vm-add  {
+	.cbp-vm-view-list .cbp-vm-add {
 		margin: 10px;
 	}
 }
