Added description and title

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,7 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Test</title>
+        <title>PWrRssReader WebApp</title>
+        <description>Rss feeds fetcher from all known PWr services.</description>
 
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
