Responsive layout finished.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -26,23 +26,21 @@
 
     </head>
     <body>
-        <div class="container">
-            <header class="clearfix">
-                <h1>PWr RSS Reader</h1>
-            </header>
-            <div class="main">
-                <div class="ajax_loader"></div>
-                <div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
-                    <div class="cbp-vm-options">
-                        <a href="#" class="cbp-vm-icon cbp-vm-grid cbp-vm-selected" data-view="cbp-vm-view-grid">Grid View</a>
-                        <a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
-                    </div>
-                    <ul></ul>
-                </div>
-            </div><!-- /main -->
-        </div><!-- /container -->
+	    <div class="main">
+		    <header>
+		        <h1>PWr RSS Reader</h1>
+		    </header>
+	        <div class="ajax_loader"></div>
+	        <div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
+	            <div class="cbp-vm-options">
+	                <a href="#" class="cbp-vm-icon cbp-vm-grid cbp-vm-selected" data-view="cbp-vm-view-grid">Grid View</a>
+	                <a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
+	            </div>
+	            <ul></ul>
+	        </div>
+	    </div><!-- /main -->
 
         <script src="@routes.Assets.at("javascripts/classie.js")"></script>
-        <script src="@routes.Assets.at("javascripts/cbpViewModeSwitch.js")"></script>
+        <script src="@routes.Assets.at("javascripts/viewModeSwitch.js")"></script>
     </body>
 </html>
