--- a/public/stylesheets/component.css
+++ b/public/stylesheets/component.css
@@ -6,9 +6,9 @@
 
 /* Main container */
 .cbp-vm-switcher {
-	padding: 20px;
-	border: 3px solid #00aaff;
+	padding: 10px;
 	margin-bottom: 20px;
+	border: 3px solid #00aaff;
 }
 
 /* options/select wrapper with switch anchors */
@@ -26,6 +26,7 @@
 	white-space: nowrap;
 	color: #d0d0d0;
 	margin: 2px;
+	transition: color 0.3s ease-out;
 }
 
 .cbp-vm-options a:hover, .cbp-vm-options a.cbp-vm-selected {
@@ -50,23 +51,9 @@
 }
 
 /* Clear eventual floats */
-.cbp-vm-switcher ul:before, .cbp-vm-switcher ul:after {
-	content: " ";
-	display: table;
-}
-
-.cbp-vm-switcher ul:after {
-	clear: both;
-}
-
 .cbp-vm-switcher ul li {
 	display: block;
 	position: relative;
-}
-
-.cbp-vm-image {
-	display: block;
-	margin: 0 auto;
 }
 
 /* IMAGE SIZE */
@@ -78,7 +65,6 @@
 
 .cbp-vm-title {
 	margin: 0;
-	padding: 0;
 }
 
 .cbp-vm-date {
@@ -90,7 +76,7 @@
 	background: #47a3da;
 	padding: 10px 20px;
 	border-radius: 2px;
-	margin: 20px 0 0;
+	margin: 20px auto;
 	display: inline-block;
 	transition: background 0.2s;
 }
@@ -116,21 +102,28 @@
 	-webkit-font-smoothing: antialiased;
 }
 
+/**
+ * 	Icons
+ */
+
+/* List */
 .cbp-vm-list:before {
 	content: "\e00a";
 }
 
+/* Grid */
 .cbp-vm-grid:before {
 	content: "\e00b";
 }
 
+/* Button */
 .cbp-vm-add:before {
 	content: "\e00c";
 }
 
 /* Individual view mode styles */
 
-/* Large grid view */
+/* Grid view */
 .cbp-vm-view-grid ul {
 	text-align: center;
 }
@@ -144,7 +137,6 @@
 }
 
 .cbp-vm-view-grid .cbp-vm-details {
-	max-width: 300px;
 	margin: 0 10px;
 	overflow: hidden;
 	text-align: justify;
@@ -155,75 +147,127 @@
 	font-size: 1.0em;
 }
 
-/* List view */
-.cbp-vm-view-list li {
-	padding: 10px 0;
-	white-space: nowrap;
-}
-
-.cbp-vm-view-list .cbp-vm-image, .cbp-vm-view-list .cbp-vm-title, .cbp-vm-view-list .cbp-vm-details, .cbp-vm-view-list .cbp-vm-date, .cbp-vm-view-list .cbp-vm-add {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.cbp-vm-view-list .cbp-vm-title {
-	padding: 0 10px;
-	width: 20%;
-	max-height: 6em;
-	overflow: hidden;
-	white-space: normal;
-	text-overflow: ellipsis;
-}
-
-.cbp-vm-view-list .cbp-vm-date {
-	width: 15%;
-	margin-right: 10px;
-}
-
-.cbp-vm-view-list .cbp-vm-details {
-	width: 35%;
-	max-height: 6em;
-	padding: 0 15px;
-	overflow: hidden;
-	white-space: normal;
-	text-overflow: ellipsis;
-}
-
-@media screen and (max-width: 66.7em) {
-	.cbp-vm-view-list .cbp-vm-details {
-		width: 30%;
-	}
-}
-
 @media screen and (max-width: 57em) {
 	.cbp-vm-view-grid ul li {
 		width: 49%;
 	}
 }
 
-@media screen and (max-width: 47.375em) {
-	.cbp-vm-view-list .cbp-vm-image {
-		width: 20%;
-	}
-
-	.cbp-vm-view-list .cbp-vm-title {
-		width: auto;
-	}
-
-	.cbp-vm-view-list .cbp-vm-details {
-		display: block;
-		width: 100%;
-		margin: 10px 0 0 0;
-	}
-
-	.cbp-vm-view-list .cbp-vm-add {
-		margin: 10px;
-	}
-}
-
-@media screen and (max-width: 40.125em) {
+@media screen and (max-width: 35em) {
 	.cbp-vm-view-grid ul li {
 		width: 100%;
 	}
 }
 
+/* List view */
+.cbp-vm-view-list li {
+	padding: 10px 0;
+	list-style-type: none;
+	clear: both;
+}
+
+.cbp-vm-view-list .cbp-vm-image,
+.cbp-vm-view-list .cbp-vm-title,
+.cbp-vm-view-list .cbp-vm-details,
+.cbp-vm-view-list .cbp-vm-date,
+.cbp-vm-view-list .cbp-vm-add {
+	/*display: inline-block;*/
+	vertical-align: middle;
+}
+
+.cbp-vm-view-list .cbp-vm-image,
+.cbp-vm-view-list .cbp-vm-title,
+.cbp-vm-view-list .cbp-vm-details,
+.cbp-vm-view-list .cbp-vm-date {
+	float: left;
+}
+
+.cbp-vm-view-list .cbp-vm-image {
+	width: 10%;
+}
+
+.cbp-vm-view-list .cbp-vm-title {
+	width: 15%;
+	margin: 0 5px;
+}
+
+.cbp-vm-view-list .cbp-vm-date {
+	width: 15%;
+}
+
+.cbp-vm-view-list .cbp-vm-details {
+	width: 40%;
+	margin: 0 10px;
+}
+
+.cbp-vm-view-list .cbp-vm-add {
+	width: 15%;
+	min-width: 135px;
+	text-align: center;
+}
+
+@media screen and (max-width: 70em) {
+	.cbp-vm-view-list .cbp-vm-title {
+		width: 85%;
+	}
+
+	.cbp-vm-view-list .cbp-vm-date,
+	.cbp-vm-view-list .cbp-vm-details {
+		width: auto;
+	}
+
+	.cbp-vm-view-list .cbp-vm-add {
+		clear: both;
+    	display: block;
+		float: none;
+	}
+
+	.cbp-vm-view-list .cbp-vm-date {
+		margin-left: 5px;
+	}
+
+	.cbp-vm-view-list .cbp-vm-details {
+		margin-bottom: 10px;
+	}
+}
+
+@media screen and (max-width: 40em) {
+	.cbp-vm-view-list .cbp-vm-image,
+	.cbp-vm-view-list .cbp-vm-title,
+	.cbp-vm-view-list .cbp-vm-details,
+	.cbp-vm-view-list .cbp-vm-date,
+	.cbp-vm-view-list .cbp-vm-add {
+		display: block;
+		float: none;
+	}
+
+	.cbp-vm-view-list .cbp-vm-title,
+	.cbp-vm-view-list .cbp-vm-details,
+	.cbp-vm-view-list .cbp-vm-date {
+		margin: 0.3em auto;
+		width: 100%;
+	}
+
+	.cbp-vm-view-list .cbp-vm-details {
+		text-align: justify
+	}
+
+	.cbp-vm-view-list .cbp-vm-title,
+	.cbp-vm-view-list .cbp-vm-date {
+		text-align: center;
+	}
+
+	.cbp-vm-view-list .cbp-vm-image {
+		margin: 0.2em auto;
+		height: 130px;
+		width: 130px;
+	}
+
+	.cbp-vm-view-list .cbp-vm-image img {
+	  width: auto;
+	}
+
+	.cbp-vm-view-grid ul li {
+		width: 100%;
+	}
+}
