--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -6,7 +6,9 @@
 	box-sizing: border-box;
 }
 
-a { text-decoration: none; }
+a {
+	text-decoration: none;
+}
 
 body, html {
 	font-size: 100%;
@@ -14,28 +16,18 @@ body, html {
 	margin: 0;
 }
 
-.clearfix:before, .clearfix:after {
-	content: "";
-	display: table;
-	clear: both;
-}
-
-.clearfix {
-	margin: -30px;
-}
-
 body {
 	font-family: 'Lato', Calibri, Arial, sans-serif;
 	color: #00aaff;
 }
 
-.main, .container > header {
+.main {
 	width: 90%;
 	max-width: 69em;
 	margin: 0 auto;
 }
 
-.container > header h1 {
+.main header h1 {
 	margin: 0;
 	padding-left: 150px;
 	line-height: 150px;
@@ -52,10 +44,15 @@ body {
 }
 
 @media screen and (max-width: 30em) {
-	.container > header h1 {
+	.main header h1 {
 		background-position: top;
 		padding-left: 0px;
 		padding-top: 50px;
 		text-align: center;
+	}
+
+	.ajax_loader {
+		margin: 0 auto 5px;
+		max-width: 15em;
 	}
 }
