--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,46 +1,88 @@
+@(channels: Html)
+
 <!DOCTYPE html>
 
 <html lang="en" class="no-js">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="PWr Rss news feed agregator" />
+		<meta name="keywords" content="pwr rss reaader" />
+		<meta name="author" content="Squixy" />
 
-        <title>PWrRssReader WebApp</title>
+		<title>PWrRssReader WebApp</title>
 
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+		<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/component.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/normalize.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/checkbox.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/channel.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/component.css")">
 
-        <script src="@routes.Application.javascriptRoutes"></script>
+		<script src="@routes.Application.javascriptRoutes"></script>
 
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.fittext.js")"></script>
-        <script src="@routes.Assets.at("javascripts/scripts.js")"></script>
-        <script src="@routes.Assets.at("javascripts/modernizr.custom.js")"></script>
+		<script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")"></script>
+		<script src="@routes.Assets.at("javascripts/jquery.fittext.js")"></script>
+		<script src="@routes.Assets.at("javascripts/classie.js")"></script>
+		<script src="@routes.Assets.at("javascripts/scripts.js")"></script>
+		<script src="@routes.Assets.at("javascripts/modernizr.custom.js")"></script>
+		<script src="@routes.Assets.at("javascripts/plugins.js")"></script>
+		<script src="@routes.Assets.at("javascripts/checkbox.js")"></script>
 
-        <!--[if IE]>
-            <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
+		<!--[if IE]>
+		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 
-    </head>
-    <body>
-	    <div class="main">
-		    <header>
-		        <h1>PWr RSS Reader</h1>
-		    </header>
-	        <div class="ajax_loader"></div>
-	        <div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
-	            <div class="cbp-vm-options">
-	                <a href="#" class="cbp-vm-icon cbp-vm-grid cbp-vm-selected" data-view="cbp-vm-view-grid">Grid View</a>
-	                <a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
-	            </div>
-	            <ul></ul>
-	        </div>
-	    </div><!-- /main -->
+	</head>
+	<body>
+		<div class="container">
+			<ul id="gn-menu" class="gn-menu-main">
+				<li class="gn-trigger">
+					<a class="gn-icon gn-icon-menu"><span>Menu</span></a>
+					<nav class="gn-menu-wrapper">
+						<h1>Nawigacja</h1>
+						<div class="gn-scroller">
+							<ul class="gn-menu">
+								<li class="gn-search-item">
+									<input placeholder="Search" type="search" class="gn-search">
+									<a class="gn-icon gn-icon-search"><span>Search</span></a>
+								</li>
+								@channels
+							</ul>
+						</div><!-- /gn-scroller -->
+					</nav>
+				</li>
 
-        <script src="@routes.Assets.at("javascripts/classie.js")"></script>
-        <script src="@routes.Assets.at("javascripts/viewModeSwitch.js")"></script>
-    </body>
+				<li>
+					<a class="codrops-icon codrops-icon-prev" href="https://play.google.com/store/apps/details?id=pwr.rss.reader&hl=pl" target="_blank">
+						<span>Mobile App</span>
+					</a>
+				</li>
+				<li>
+					<a class="codrops-icon codrops-icon-drop" href="#"><span>Back to top</span></a>
+				</li>
+			</ul>
+			<div class="main">
+				<header>
+					<h1>PWr RSS Reader</h1>
+				</header>
+				<div class="ajax_loader"></div>
+				<div id="cbp-vm" class="cbp-vm-switcher cbp-vm-view-grid">
+					<div class="cbp-vm-options">
+						<a href="#" class="cbp-vm-icon cbp-vm-grid cbp-vm-selected" data-view="cbp-vm-view-grid">Grid View</a>
+						<a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
+					</div>
+					<ul></ul>
+				</div>
+			</div><!-- /main -->
+		</div><!-- /container -->
+
+		<script src="@routes.Assets.at("javascripts/viewModeSwitch.js")"></script>
+		<script src="@routes.Assets.at("javascripts/gnmenu.js")"></script>
+		<script>
+			new gnMenu(document.getElementById('gn-menu'));
+		</script>
+	</body>
 </html>
