--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,6 +20,7 @@
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/channel.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/component.css")">
+		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/loading.css")">
 
 		<script src="@routes.Application.javascriptRoutes"></script>
 
@@ -30,6 +31,7 @@
 		<script src="@routes.Assets.at("javascripts/modernizr.custom.js")"></script>
 		<script src="@routes.Assets.at("javascripts/plugins.js")"></script>
 		<script src="@routes.Assets.at("javascripts/checkbox.js")"></script>
+		<script src="@routes.Assets.at("javascripts/filter.list.js")"></script>
 
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -44,9 +46,9 @@
 					<nav class="gn-menu-wrapper">
 						<h1>Nawigacja</h1>
 						<div class="gn-scroller">
-							<ul class="gn-menu">
+							<ul class="gn-menu list">
 								<li class="gn-search-item">
-									<input placeholder="Search" type="search" class="gn-search">
+									<input placeholder="Search" type="search" class="gn-search search">
 									<a class="gn-icon gn-icon-search"><span>Search</span></a>
 								</li>
 								@channels
@@ -78,6 +80,17 @@
 				</div>
 			</div><!-- /main -->
 		</div><!-- /container -->
+		
+		<div id="circularG">
+			<div id="circularG_1" class="circularG"></div>
+			<div id="circularG_2" class="circularG"></div>
+			<div id="circularG_3" class="circularG"></div>
+			<div id="circularG_4" class="circularG"></div>
+			<div id="circularG_5" class="circularG"></div>
+			<div id="circularG_6" class="circularG"></div>
+			<div id="circularG_7" class="circularG"></div>
+			<div id="circularG_8" class="circularG"></div>
+		</div>
 
 		<script src="@routes.Assets.at("javascripts/viewModeSwitch.js")"></script>
 		<script src="@routes.Assets.at("javascripts/gnmenu.js")"></script>
