--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -20,7 +20,6 @@
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/channel.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
 		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/component.css")">
-		<link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/loading.css")">
 
 		<script src="@routes.Application.javascriptRoutes"></script>
 
@@ -32,6 +31,7 @@
 		<script src="@routes.Assets.at("javascripts/plugins.js")"></script>
 		<script src="@routes.Assets.at("javascripts/checkbox.js")"></script>
 		<script src="@routes.Assets.at("javascripts/filter.list.js")"></script>
+		<script src="@routes.Assets.at("javascripts/scroll.js")"></script>
 
 		<!--[if IE]>
 		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -80,17 +80,6 @@
 				</div>
 			</div><!-- /main -->
 		</div><!-- /container -->
-		
-		<div id="circularG">
-			<div id="circularG_1" class="circularG"></div>
-			<div id="circularG_2" class="circularG"></div>
-			<div id="circularG_3" class="circularG"></div>
-			<div id="circularG_4" class="circularG"></div>
-			<div id="circularG_5" class="circularG"></div>
-			<div id="circularG_6" class="circularG"></div>
-			<div id="circularG_7" class="circularG"></div>
-			<div id="circularG_8" class="circularG"></div>
-		</div>
 
 		<script src="@routes.Assets.at("javascripts/viewModeSwitch.js")"></script>
 		<script src="@routes.Assets.at("javascripts/gnmenu.js")"></script>
