--- a/app/views/channel.scala.html
+++ b/app/views/channel.scala.html
@@ -3,7 +3,7 @@
 
 <li>
 	<div class="checkBoxContainer">
-		<a class="gn-icon @channel._1">@channel._2</a>
+		<a class="gn-icon @channel._1" href="#feed_@channel._1">@channel._2</a>
 		<input type="checkbox" id="@channel._1" />
 		<label for="@channel._1"></label>
 	</div>
