--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(channels: Html, feeds: Html)
+@(channels: Html)
 
 <!DOCTYPE html>
 
@@ -78,7 +78,6 @@
 						<a href="#" class="cbp-vm-icon cbp-vm-list" data-view="cbp-vm-view-list">List View</a>
 					</div>
 					<ul>
-						@feeds
 					</ul>
 				</div>
 			</div><!-- /main -->
