--- a/public/stylesheets/component.css
+++ b/public/stylesheets/component.css
@@ -585,7 +585,7 @@ input.gn-search:focus {
 		height: 60px
 }
 
-@media screen and (max-width: 422px) {
+@media screen and (max-width: 400px) {
 	.gn-menu-wrapper.gn-open-all {
 			-webkit-transform: translateX(0px);
 			-moz-transform: translateX(0px);
@@ -594,12 +594,13 @@ input.gn-search:focus {
 	}
 
 	.gn-menu-wrapper.gn-open-all .gn-scroller {
-			width: 130%
+			width: 110%
 	}
 }
 
-@media screen and (max-width: 15em) {
-	.gn-menu-main > li:nth-child(2) {
+@media screen and (max-width: 16em) {
+	.gn-menu-main > li:nth-child(2),
+	.gn-menu-main .checkBoxContainer label {
 		display: none;
 	}
 }
